# junkyard

_0x64/: Cargo.toml
_0x64/src/: cal.rs  main.rs  utils.rs
blog/: index.html
blog/styles/: main-page.css
exploitus/: .config  .msg_deque  .request_file  .response_file  Cargo.toml  response_file
exploitus/src/: exploitus.rs  gui.rs  main.rs  utils.rs
game-server/client/: Cargo.toml
game-server/client/src/: main.rs  request.rs  test.rs
game-server/net-utils/: Cargo.toml
game-server/net-utils/src/: character.rs  lib.rs  map.rs  packet.rs
game-server/server/: Cargo.toml
game-server/server/src/: action_check.rs  lib.rs  main.rs  response.rs
pack-this-elf/: README.md
pack-this-elf/include/: packer.h
pack-this-elf/src/: error.c  packer.c  sections.c  unpack_xor.asm
univ/edt-helper/: ics_file_creator.php
univ/eliza/: pom.xml
univ/eliza/src/main/java/fr/univ_lyon1/info/m1/eliza/: App.java
univ/eliza/src/main/java/fr/univ_lyon1/info/m1/eliza/controller/: DialogController.java
univ/eliza/src/main/java/fr/univ_lyon1/info/m1/eliza/model/: DialogState.java  MessageData.java
univ/eliza/src/main/java/fr/univ_lyon1/info/m1/eliza/view/: ChatWindow.java
univ/eliza/src/main/resources/response_data/: predefined.json  predefined_with_username.json  random.json  verbs.json
univ/eliza/src/main/resources/styles/: chat-window.css
univ/eliza/src/test/java/fr/univ_lyon1/info/m1/eliza/controller/: DialogControllerTest.java
univ/pubchem-extractor/: Cargo.toml
univ/pubchem-extractor/src/: compound-template.html  compound_names  main.rs
(+13 files in other folders)
