[package]
name = "game_server"
version = "0.1.0"
edition = "2021"

[dependencies]
net-utils = { path = "../net-utils" }
serde_json = "1.0"
serde = { version = "1.0.160", features = ["derive"] }
async-channel = "1.8"
redis = { version = "0.23", features = ["tokio-comp"] }
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
tokio = { version = "1.27", features = ["full", "tracing"] }
tracing = "0.1"
rand = "0.8"